<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    style="@style/toolbarColor"
    tools:context=".Bluetooth"
    tools:ignore="HardcodedText">

    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:headerLayout="@layout/header"
        app:menu="@menu/activity_list_menu"
        android:id="@+id/nav_view"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        app:drawerLayoutCornerSize="20dp"
        android:layout_gravity="start"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />

        <LinearLayout
            android:id="@+id/layout_setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/dropDown"
            android:orientation="vertical"
            android:padding="20dp">

            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/setting_name"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:textSize="13sp" />

            <EditText
                android:id="@+id/et_mac"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/setting_mac"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:textSize="13sp" />

            <EditText
                android:id="@+id/et_uuid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/setting_uuid"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:textSize="13sp" />

            <Switch
                android:id="@+id/sw_auto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/autoconnect"
                android:textSize="13sp"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

        </LinearLayout>

        <TextView
            android:id="@+id/txt_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            style="@style/dropDown"
            android:padding="10dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <Button
                android:id="@+id/btn_scan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                style="@style/buttonColor"
                android:text="@string/start_scan" />

            <ImageView
                android:id="@+id/img_loading"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:src="@mipmap/ic_loading"
                android:visibility="invisible" />

        </RelativeLayout>

        <ListView
            android:id="@+id/list_device"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:divider="@android:color/darker_gray"
            android:dividerHeight="0.5dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:scrollbars="none" />


    </LinearLayout>



</androidx.drawerlayout.widget.DrawerLayout>